data/derived/sp14/progs/unify/prog3392.ml.out
Characters 48-49:
  if (explode w = listReverse w) then true
                              ^
Error: This expression has type string but an expression was expected of type
         'a list
